--- a/WebContent/frontend/index.html
+++ b/WebContent/frontend/index.html
@@ -39,7 +39,7 @@
 			<nav aria-label="breadcrumb" style="padding-top:6px; padding-left: 25px;"> 
 				<ol class="breadcrumb" id="breadcrumbOl"></ol>
 			</nav>
-			<div id="userString" class="ml-auto mr-3" style="padding-top:29px"></div>
+			<div class="ml-auto mr-3" style="padding-top:15px"><a href="#" onclick="reload()">&#x1F504;</a></div>
 		</div>
 	</div>
 	<div id="loading" style=" z-index: 999; width: 100px; height: 100px; position: absolute; top: 30%; left: 50%; margin-left: -50px;">
